# libnetstack

./: .drone.yml  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
debian/: changelog  control  copyright  libnetstack-dev.install  netstack-bin.install  rules  watch
include/: netstack.h
src/lib/: ethtool.c  ethtool.h  netstack.c  output.c
tests/: copy.cpp  enumerate.cpp  extcopy.cpp  idxlookup.cpp  inspect.cpp  intcopy.cpp  main.h  namelookup.cpp  netstack.cpp  notrack.cpp
tools/: libnetstack.pc.in  libnetstack.spec  libnetstackConfig.cmake.in  release.sh
